[package]
name = "cdumay_http"
version = "0.1.1"
edition = "2024"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for HTTP data"
documentation = "https://docs.rs/cdumay_http"
homepage = "https://github.com/cdumay/cdumay_http"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_http"

[dependencies]
cdumay_core = "0.1"
serde-value = "0.7"
